change display to include 'set:'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <div id="set-counter">
-        <h1 id='set-display'>Set</h1>
+        <h1>Set:</h1>
+        <h1 id='set-display'></h1>
     </div>
     <div id="statusContainer">
         <h1 id='status'> </h1>
