fix restart button to restart mid-timer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Interval timer</title>
     <link type='text/css' rel="stylesheet" href="/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
-    <script defer type='text/javascript' src="/index.js"></script>
+    <script defer type='module' src="/index.js"></script>
 </head>
 
 <body>
