post response working too!

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,8 @@
             </div>
             <button id='submit-save'>Submit</button>
             <button id='modal-cancel'>Cancel</button>
+            <br>
+            <h1 id='saved-response'></h1>
         </div>
     </div>
 </body>
