use saved timer functions

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,12 @@
             <h1 id='saved-response'></h1>
         </div>
     </div>
+    <div id="saved-modal" class="modal">
+        <div class="modal-content">
+            <h1>some stuff</h1>
+            <button id='saved-modal-cancel'>Cancel</button>
+        </div>
+    </div>
 </body>
 
 </html>
