stylizing in progress

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
+    <div id="extra-border">
     <div id="div-container">
+        <div id="real-container">
         <div id="statusContainer">
             <h1 class='hide' id='status'></h1>
         </div>
@@ -106,6 +108,8 @@
             <button id='saved-modal-cancel'>Cancel</button>
         </div>
     </div>
+</div>
+</div>
 </body>
 
 </html>
