--- a/public/index.html
+++ b/public/index.html
@@ -54,13 +54,13 @@
                 <label for="breakSeconds">s</label>
             </div>
         </div>
-        <div id='buttons'>
-            <button id='start'>Start</button>
-            <button id='pause-continue'>Pause</button>
-            <button id='reset'>Reset</button>
+        <div id='main-buttons'>
+            <button class='button' id='start'>Start</button>
+            <button class='button' id='pause-continue'>Pause</button>
+            <button class='button' id='reset'>Reset</button>
             <br>
-            <button id='save'>Save Timer</button>
-            <button id='use-saved'>Use Saved Timer</button>
+            <button class='button' id='save'>Save Timer</button>
+            <button class='button' id='use-saved'>Use Saved Timer</button>
         </div>
     </div>
     <div id='modal' class="modal">
@@ -94,8 +94,8 @@
                 </select>
                 <label>s</label>
             </div>
-            <button id='submit-save'>Submit</button>
-            <button id='modal-cancel'>Cancel</button>
+            <button class='button' id='submit-save'>Submit</button>
+            <button class='button' id='modal-cancel'>Cancel</button>
             <br>
             <h1 id='saved-response'></h1>
         </div>
@@ -105,7 +105,7 @@
             <div id="fetched-timer-container">
             </div>
             <br>
-            <button id='saved-modal-cancel'>Cancel</button>
+            <button class='button' id='saved-modal-cancel'>Cancel</button>
         </div>
     </div>
 </div>
